--- a/src/app/modules/admin/roles-and-permissions/components/add-role/add-role.component.html
+++ b/src/app/modules/admin/roles-and-permissions/components/add-role/add-role.component.html
@@ -54,7 +54,7 @@
                 <tbody *ngFor="let row of menuRows; index as i" class="border-t">
                     <tr>
                         <td class="p-3 font-normal text-black">
-                            <span [ngClass]="{'sub-headings': row.isChild==0}">{{row.name}}
+                            <span [ngClass]="{'sub-headings': row.isChild==0 || row.name != 'logs'}">{{row.name}}
                             </span>
                         </td>
                         <td>
@@ -110,7 +110,6 @@
                 }}
             </button>
         </div>
-
     </div>
 
     <!-- <div class="flex flex-col gap-6">
