--- a/src/app/modules/admin/expense/components/manage-expense/manage-expense.component.html
+++ b/src/app/modules/admin/expense/components/manage-expense/manage-expense.component.html
@@ -17,53 +17,32 @@
         </div>
 
         <!-- Export SVGs -->
-        <!-- <div class="flex items-center gap-4">
-            <svg
-                matTooltip="Export as PDF"
-                version="1.0"
-                xmlns="http://www.w3.org/2000/svg"
-                width="35px"
-                height="35px"
-                viewBox="0 0 100.000000 100.000000"
-                preserveAspectRatio="xMidYMid meet"
-                class="fill-black hover:fill-myAccent transition cursor-pointer"
-            >
-                <g
-                    transform="translate(0.000000,100.000000) scale(0.100000,-0.100000)"
-                    stroke="none"
-                >
-                    <path
-                        d="M140 500 l0 -460 360 0 360 0 0 328 -1 327 -138 133 -139 132 -221 0
+        <div class="flex items-center gap-4">
+            <button (click)="exportPdf()" type="button">
+                <svg matTooltip="Export as PDF" version="1.0" xmlns="http://www.w3.org/2000/svg" width="35px"
+                    height="35px" viewBox="0 0 100.000000 100.000000" preserveAspectRatio="xMidYMid meet"
+                    class="fill-black hover:fill-myAccent transition cursor-pointer">
+                    <g transform="translate(0.000000,100.000000) scale(0.100000,-0.100000)" stroke="none">
+                        <path d="M140 500 l0 -460 360 0 360 0 0 328 -1 327 -138 133 -139 132 -221 0
 -221 0 0 -460z m420 290 l0 -130 130 0 130 0 0 -290 0 -290 -320 0 -320 0 0
 420 0 420 190 0 190 0 0 -130z m185 -39 l49 -51 -97 0 -97 0 0 91 0 91 48 -40
-c26 -22 69 -63 97 -91z"
-                    />
-                    <path
-                        d="M438 575 c-9 -20 -8 -33 5 -65 17 -44 13 -69 -22 -138 -12 -24 -34
+c26 -22 69 -63 97 -91z" />
+                        <path d="M438 575 c-9 -20 -8 -33 5 -65 17 -44 13 -69 -22 -138 -12 -24 -34
 -48 -54 -58 -67 -34 -87 -73 -48 -94 29 -15 29 -14 81 39 37 38 62 54 105 66
 51 15 59 15 90 1 42 -20 69 -20 89 0 38 38 7 67 -65 62 -50 -3 -53 -2 -86 39
 -33 40 -34 43 -22 82 9 31 9 47 1 66 -16 34 -58 34 -74 0z m81 -199 c-2 -2
--16 -7 -31 -11 -27 -7 -27 -6 -15 24 11 31 11 31 31 11 11 -11 18 -21 15 -24z"
-                    />
-                </g>
-            </svg>
+-16 -7 -31 -11 -27 -7 -27 -6 -15 24 11 31 11 31 31 11 11 -11 18 -21 15 -24z" />
+                    </g>
+                </svg>
+            </button>
 
-            <svg
-                matTooltip="Export as Excel"
-                version="1.0"
-                xmlns="http://www.w3.org/2000/svg"
-                width="35px"
-                height="35px"
-                viewBox="0 0 100.000000 100.000000"
-                preserveAspectRatio="xMidYMid meet"
-                class="fill-black hover:fill-myAccent transition cursor-pointer"
-            >
-                <g
-                    transform="translate(0.000000,100.000000) scale(0.100000,-0.100000)"
-                    stroke="none"
-                >
-                    <path
-                        d="M285 945 c-148 -30 -273 -54 -277 -54 -5 -1 -8 -176 -8 -390 l0 -389
+
+            <button (click)="exportExcel()">
+                <svg matTooltip="Export as Excel" version="1.0" xmlns="http://www.w3.org/2000/svg" width="35px"
+                    height="35px" viewBox="0 0 100.000000 100.000000" preserveAspectRatio="xMidYMid meet"
+                    class="fill-black hover:fill-myAccent transition cursor-pointer">
+                    <g transform="translate(0.000000,100.000000) scale(0.100000,-0.100000)" stroke="none">
+                        <path d="M285 945 c-148 -30 -273 -54 -277 -54 -5 -1 -8 -176 -8 -390 l0 -389
 23 -5 c92 -23 560 -106 568 -102 5 4 9 31 9 61 l0 54 178 0 c125 0 182 4 190
 12 17 17 17 719 0 736 -8 8 -65 12 -190 12 l-177 0 -3 58 c-3 49 -6 57 -23 59
 -11 0 -141 -23 -290 -52z m275 -444 l0 -458 -137 27 c-76 15 -193 38 -260 50
@@ -71,33 +50,23 @@ l-123 22 0 358 0 358 123 22 c100 19 385 75 395 79 1 1 2 -205 2 -458z m380
 -1 l0 -340 -170 0 -170 0 0 50 0 50 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20
 l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50 40 0 c33 0 40 3 40
-20 0 17 -7 20 -40 20 l-40 0 0 50 0 50 170 0 170 0 0 -340z"
-                    />
-                    <path
-                        d="M140 684 c0 -4 23 -47 51 -96 l51 -89 -56 -88 c-31 -49 -56 -92 -56
+20 0 17 -7 20 -40 20 l-40 0 0 50 0 50 170 0 170 0 0 -340z" />
+                        <path d="M140 684 c0 -4 23 -47 51 -96 l51 -89 -56 -88 c-31 -49 -56 -92 -56
 -95 0 -4 21 -6 48 -4 l47 3 36 69 37 70 36 -72 36 -72 51 0 51 0 -23 38 c-12
 20 -38 61 -56 90 -18 29 -33 57 -33 62 0 5 22 46 50 92 27 46 50 86 50 91 0 4
--19 7 -43 7 l-43 0 -36 -70 -37 -70 -33 67 -33 68 -47 3 c-27 2 -48 0 -48 -4z"
-                    />
-                    <path
-                        d="M720 720 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
-0 -80 -2 -80 -20z"
-                    />
-                    <path
-                        d="M720 580 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
-0 -80 -2 -80 -20z"
-                    />
-                    <path
-                        d="M720 440 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
-0 -80 -2 -80 -20z"
-                    />
-                    <path
-                        d="M720 280 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
-0 -80 -2 -80 -20z"
-                    />
-                </g>
-            </svg>
-        </div> -->
+-19 7 -43 7 l-43 0 -36 -70 -37 -70 -33 67 -33 68 -47 3 c-27 2 -48 0 -48 -4z" />
+                        <path d="M720 720 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
+0 -80 -2 -80 -20z" />
+                        <path d="M720 580 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
+0 -80 -2 -80 -20z" />
+                        <path d="M720 440 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
+0 -80 -2 -80 -20z" />
+                        <path d="M720 280 c0 -18 7 -20 80 -20 73 0 80 2 80 20 0 18 -7 20 -80 20 -73
+0 -80 -2 -80 -20z" />
+                    </g>
+                </svg>
+            </button>
+        </div>
     </div>
 
     <!-- Content -->
@@ -179,7 +148,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <ng-container matColumnDef="taxAmount">
                 <th mat-header-cell *matHeaderCellDef>Tax Amount</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.taxAmount == null ? "-" : element.taxAmount }}
+                    {{ element.taxAmount == null ? "-" : element.taxAmount | number:'1.1-1' }}
                 </td>
             </ng-container>
 
